@@ -12,6 +12,10 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 * Support multiple tab labels (terms) for the same content (description) (#8)
 * Allow alternate stylesheet for tabs to be specified using `tabs-stylesheet` attribute (#6)
 
+=== Changed
+
+* Assign ID directly to tab (list item) node (instead of using inline anchor) if backend supports it (#11)
+
 === Fixed
 
 * Create empty pane instead of crashing if dlist item has term only / no description
